--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								</div>
 							</div>
 							</div>
-						<div id="sfclz9l8g3qxb6b2ez7t7wt141ktwwth3s1"></div><script type="text/javascript" src="https://counter9.stat.ovh/private/counter.js?c=lz9l8g3qxb6b2ez7t7wt141ktwwth3s1&down=async" async></script><br><a href="">profile visits</a><noscript><a href="https://www.freecounterstat.com" title="profile visits"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=lz9l8g3qxb6b2ez7t7wt141ktwwth3s1" border="0" title="profile visits" alt="profile visits"></a></noscript>
+						<div id="sfclz9l8g3qxb6b2ez7t7wt141ktwwth3s1"></div><script type="text/javascript" src="https://counter9.stat.ovh/private/counter.js?c=lz9l8g3qxb6b2ez7t7wt141ktwwth3s1&down=async" async></script><br><a href="">profile visits</a><noscript><a href="https://xat.me/vals" title="profile visits"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=lz9l8g3qxb6b2ez7t7wt141ktwwth3s1" border="0" title="profile visits" alt="profile visits"></a></noscript>
 		</div>
 						</div>
 					</div>
