--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 								</div>
 							</div>
 							</div>
-						<div id="sfclz9l8g3qxb6b2ez7t7wt141ktwwth3s1"></div><script type="text/javascript" src="https://counter9.stat.ovh/private/counter.js?c=lz9l8g3qxb6b2ez7t7wt141ktwwth3s1&down=async" async></script><br><a href="">profile visits</a><noscript><a href="https://xat.me/vals" title="profile visits"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=lz9l8g3qxb6b2ez7t7wt141ktwwth3s1" border="0" title="profile visits" alt="profile visits"></a></noscript>
+							</div>
+  	  <a href='https://bachelorthesiswritingservice.com/'>Profile Views</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2b80f3f4216ee4d153fc57da50cfc0c3c8623c26'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/931795/t/5"></script>
+   </body>
 		</div>
 						</div>
 					</div>
