--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 										<span class="frame"><img src="assets/images/image02.png" alt="" /></span>
 									</div>
 								</div>
-							</div>
+							</div>  <a href='https://bachelorthesiswritingservice.com/'>Profile Views</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2b80f3f4216ee4d153fc57da50cfc0c3c8623c26'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/931795/t/5"></script>
 						</div>
 					</div>
 				</div>
